--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #main {
     display: flex;
     background-color: whitesmoke!important;
